<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MapsActivity"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true">
    <!--tools:openDrawer="start"-->

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintLeft_toLeftOf="parent"
        mapbox:layout_constraintRight_toRightOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="55.944"
        mapbox:mapbox_cameraTargetLng="-3.188396"
        mapbox:mapbox_cameraZoom="15"
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10" />


    <ImageView
        android:contentDescription="@string/top_bar_desc"
        android:id="@+id/interactive_top_bar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/interactive_top_bar"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/maps_go_to_interactive_desc"
        android:id="@+id/maps_go_to_interactive"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        app:srcCompat="@drawable/ic_interactive2"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintTop_toTopOf="@+id/interactive_top_bar" />

    <ImageView
        android:contentDescription="@string/maps_open_rates_dialog"
        android:id="@+id/maps_open_rates_dialog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="9dp"
        app:srcCompat="@drawable/ic_rates"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

