<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_shop"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/shop_pager"
        android:layout_width="0dp"
        android:layout_height="441dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375"
        tools:ignore="InvalidId" />

    <LinearLayout
        android:id="@+id/shop_page_dots"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shop_page_back_button"
        app:layout_constraintStart_toEndOf="@+id/shop_page_next_button"
        app:layout_constraintTop_toBottomOf="@+id/shop_pager"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/shop_gold_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/shop_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <ImageView
        android:contentDescription="@string/shop_gold_balance_icon_desc"
        android:id="@+id/shop_gold_balance_icon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="228dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/shop_pager"
        app:layout_constraintEnd_toStartOf="@+id/shop_gold_balance"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        app:srcCompat="@drawable/peny" />

    <Button
        android:id="@+id/shop_page_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_pager" />

    <Button
        android:id="@+id/shop_page_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/previous"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_pager" />

</android.support.constraint.ConstraintLayout>